# py-self-similarity

./: pyproject.toml
pyss/: __init__.py
