[tool.poetry]
name = "py-self-similarity"
version = "0.1.0"
description = ""
authors = ["Shunsuke KITADA <shunsuke.kitada.0831@gmail.com>"]
readme = "README.md"
packages = [{ include = "pyss" }]

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.13.1"
scikit-image = "^0.23.2"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.1.5"
mypy = ">=1.0.0"
pytest = ">=6.0.0"

[tool.ruff]
exclude = [".git", ".mypy_cache", ".ruff_cache", "tests"]
line-length = 100

[tool.ruff.lint]
select = [
    "F", # Pyflakes (default)
    "E", # Pycodestyle (default)
    "N", # pep8-naming
    "D", # pydocstyle
]
ignore = [
    "E743", # ambiguous-function-name
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
exclude = ["docs"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
